main/default/objects/Claim_Data__c/Claim_Data__c.object-meta.xml
<CustomObject>
    <label>Claim Data</label>
    <nameField>
        <displayFormat>CLD-{00000}</displayFormat>
        <label>Claim Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>