main/default/objects/Claim_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims Data</relationshipLabel>
    <relationshipName>Claims_Data</relationshipName>
    <type>Lookup</type>
</CustomField>