main/default/objects/Claim_Data__c/fields/Certificate_Reference__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Reference__c</fullName>
    <label>Certificate Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>