main/default/objects/Claim_Data__c/fields/Claim_Reference__c.field-meta.xml
<CustomField>
    <fullName>Claim_Reference__c</fullName>
    <label>Claim Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>