main/default/objects/Claim_Data__c/fields/Claim_status__c.field-meta.xml
<CustomField>
    <fullName>Claim_status__c</fullName>
    <label>Claim status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>