main/default/objects/Claim_Data__c/fields/Claims_Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Claims_Cut_Off_Date__c</fullName>
    <label>Claims Cut Off Date</label>
    <type>Date</type>
</CustomField>