main/default/objects/Claim_Data__c/fields/Date_Claim_First_Advised_Date_Claim_Made__c.field-meta.xml
<CustomField>
    <fullName>Date_Claim_First_Advised_Date_Claim_Made__c</fullName>
    <label>Date Claim First Advised/Date Claim Made</label>
    <type>Date</type>
</CustomField>