main/default/objects/Claim_Data__c/fields/Effect_Code__c.field-meta.xml
<CustomField>
    <fullName>Effect_Code__c</fullName>
    <label>Effect Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>