main/default/objects/Claim_Data__c/fields/Fees_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Fees_Reserve__c</fullName>
    <label>Fees – Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>