main/default/objects/Claim_Data__c/fields/Indemnity_Paid__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Paid__c</fullName>
    <label>Indemnity - Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>