main/default/objects/Claim_Data__c/fields/Indemnity_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Reserve__c</fullName>
    <label>Indemnity – Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>