main/default/objects/Claim_Data__c/fields/Insured_name__c.field-meta.xml
<CustomField>
    <fullName>Insured_name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Policy__r.Account__c ,Policy__r.Account__r.Name )</formula>
    <label>Insured name</label>
    <type>Text</type>
</CustomField>