main/default/objects/Claim_Data__c/fields/Last_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Uploaded_Date__c</fullName>
    <label>Last Uploaded Date</label>
    <type>Date</type>
</CustomField>