main/default/objects/Claim_Data__c/fields/Latest_Developments__c.field-meta.xml
<CustomField>
    <fullName>Latest_Developments__c</fullName>
    <label>Latest Developments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>