main/default/objects/Claim_Data__c/fields/Loss_Description__c.field-meta.xml
<CustomField>
    <fullName>Loss_Description__c</fullName>
    <label>Loss Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>