main/default/objects/Claim_Data__c/fields/Matter_No__c.field-meta.xml
<CustomField>
    <fullName>Matter_No__c</fullName>
    <externalId>true</externalId>
    <label>Matter No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>