main/default/objects/Claim_Data__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Claims Summary</relationshipLabel>
    <relationshipName>Claims_Data</relationshipName>
    <type>Lookup</type>
</CustomField>