main/default/objects/Claim_Data__c/fields/TPA_Fees__c.field-meta.xml
<CustomField>
    <fullName>TPA_Fees__c</fullName>
    <label>TPA Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>