main/default/objects/Claim_Data__c/fields/Unique_Market_Reference_UMR__c.field-meta.xml
<CustomField>
    <fullName>Unique_Market_Reference_UMR__c</fullName>
    <label>Unique Market Reference (UMR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>