main/default/objects/Claim_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Policy__c</columns>
    <columns>Claim_Reference__c</columns>
    <columns>Claim_status__c</columns>
    <columns>Claimant_Name__c</columns>
    <columns>Fees_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>