main/default/objects/Claim_Data__c/listViews/AQ_PI_Claims.listView-meta.xml
<ListView>
    <fullName>AQ_PI_Claims</fullName>
    <columns>NAME</columns>
    <columns>Policy_Number__c</columns>
    <columns>Insured_name__c</columns>
    <columns>Claim_Reference__c</columns>
    <columns>Claim_status__c</columns>
    <columns>Total_Incurred__c</columns>
    <filterScope>Everything</filterScope>
    <label>AQ PI Claims</label>
    <sharedTo>
        <roleAndSubordinates>Aqueous_Operations</roleAndSubordinates>
        <roleAndSubordinates>Aqueous_Triage</roleAndSubordinates>
        <roleAndSubordinates>Aqueous_Underwriter</roleAndSubordinates>
    </sharedTo>
</ListView>